--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "bulma": "^0.9.4",
     "country-list": "^2.3.0",
+    "env-cmd": "^10.1.0",
     "humps": "^2.0.1",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
@@ -29,23 +30,22 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f ./environments/.dev.env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:dev": "env-cmd -f ./environments/.dev.env react-scripts start",
+    "build:dev": "env-cmd -f ./environments/.dev.env npm run-script build",
+    "start:qa": "env-cmd -f ./environments/.qa.env react-scripts start",
+    "build:qa": "env-cmd -f ./environments/.qa.env npm run-script build",
+    "start:prod": "env-cmd -f ./environments/.prod.env react-scripts start",
+    "build:prod": "env-cmd -f ./environments/.prod.env npm run-script build"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
