Added 2FA into backend.

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -18,3 +18,4 @@ CPS_BACKEND_MAILGUN_API_KEY=xxx
 CPS_BACKEND_MAILGUN_DOMAIN=xxx
 CPS_BACKEND_MAILGUN_API_BASE=xxx
 CPS_BACKEND_MAILGUN_SENDER_EMAIL=xxx
+CPS_BACKEND_APP_ENABLE_2FA_ON_REGISTRATION=false
