--- a/server/dev.docker-compose.yml
+++ b/server/dev.docker-compose.yml
@@ -142,6 +142,7 @@ services:
       CPS_BACKEND_PAYMENT_PROCESSOR_SECRET_KEY: ${CPS_BACKEND_PAYMENT_PROCESSOR_SECRET_KEY}
       CPS_BACKEND_PAYMENT_PROCESSOR_PUBLIC_KEY: ${CPS_BACKEND_PAYMENT_PROCESSOR_PUBLIC_KEY}
       CPS_BACKEND_PAYMENT_PROCESSOR_WEBHOOK_SECRET_KEY: ${CPS_BACKEND_PAYMENT_PROCESSOR_WEBHOOK_SECRET_KEY}
+      CPS_BACKEND_APP_ENABLE_2FA_ON_REGISTRATION: ${CPS_BACKEND_APP_ENABLE_2FA_ON_REGISTRATION}
     build:
       context: .
       dockerfile: ./dev.Dockerfile
