--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       CPS_BACKEND_PAYMENT_PROCESSOR_SECRET_KEY: ${CPS_BACKEND_PAYMENT_PROCESSOR_SECRET_KEY}
       CPS_BACKEND_PAYMENT_PROCESSOR_PUBLIC_KEY: ${CPS_BACKEND_PAYMENT_PROCESSOR_PUBLIC_KEY}
       CPS_BACKEND_PAYMENT_PROCESSOR_WEBHOOK_SECRET_KEY: ${CPS_BACKEND_PAYMENT_PROCESSOR_WEBHOOK_SECRET_KEY}
+      CPS_BACKEND_APP_ENABLE_2FA_ON_REGISTRATION: ${CPS_BACKEND_APP_ENABLE_2FA_ON_REGISTRATION}
     depends_on:
       - db
     links:
