--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -14,6 +14,7 @@
     "env-cmd": "^10.1.0",
     "humps": "^2.0.1",
     "luxon": "^3.3.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-datepicker": "^4.12.0",
@@ -42,10 +43,17 @@
     "build:prod": "env-cmd -f ./environments/.prod.env npm run-script build"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
